refactored cljs